--- a/source/Data/Locales/正體中文.lng
+++ b/source/Data/Locales/正體中文.lng
@@ -27,6 +27,8 @@ P_I_LaunchPs=雙擊托盤/自動啟動 Photoshop
 P_I_LockIME=鎖定為英文輸入法
 C_TempFiles=退出時自動清理殘留臨時文件
 P_I=防止干擾
+Other=其他
+Other_3DsMaxSync=3ds Max 貼圖同步
 Savenow=立即儲存！
 Set_hotkey_Center=中心
 Set_hotkey_CPT=兼容模式
