--- a/source/Data/Locales/简体中文.lng
+++ b/source/Data/Locales/简体中文.lng
@@ -27,7 +27,7 @@ P_I_LockIME=锁定为英文输入法
 C_TempFiles=退出时自动清理残留临时文件
 P_I=防止干扰
 Other=其他
-Other_3DsMaxSync=3Ds Max 贴图同步
+Other_3DsMaxSync=3ds Max 贴图同步
 Savenow=立刻保存！
 Set_hotkey_Center=中心
 Set_hotkey_CPT=兼容模式
@@ -45,7 +45,7 @@ tiptext=现在保存一下吧！
 tray_Config=设置
 tray_Exit=退出
 tray_LaunchPs=启动 Photoshop
-LockIMEtip=你的输入法已经被Photoshop CS5++锁定为英文
+LockIMEtip=你的输入法已经被锁定为英文
 OpenGLtip=1.此功能需到首选项>>性能中启用 OpenGL 绘图\n2.按住空格以切换选色区域
 Tiptitle=提示
 Undotip=以下左边默认快捷键已更改为右边：
@@ -53,8 +53,8 @@ Undotip=以下左边默认快捷键已更改为右边：
 Error=错误
 CannotConnect =无法连接互联网
 NewVer=发现新版本！
-NewVerAvailable=当前发布了一个新版本： %LatestVer%\n\n点击 确定 立即更新！\n\n点击 取消 手动更新。
-NewVerNotAvailable=你正在使用最新版本 %CurrentVer%。
+NewVerAvailable=当前发布了一个新版本： v%LatestVer%\n\n点击 确定 立即更新！\n\n点击 取消 手动更新。
+NewVerNotAvailable=更新成功！当前版本：v
 
 HT_FChoice=软件功能分类列表。\n注意事项\n\t本软件部分功能仍有缺陷，请尽量使用正确的操作方式，例如在套索工具状态下使用 HUD 拾色器容易造成假死。\n\t请毋连续使用快捷键，容易占用 CPU 过高导致 Photoshop 不稳定。\n\t某些软件可能对本软件造成严重的性能损失，请在使用本软件及 Photoshop 时禁用其 进程/服务（如gdipp）。\n\t任何人均不会对本软件造成的任何不良后果承担责任。
 HT_GB_General=HT_GB_General
