--- a/source/Data/Locales/English.lng
+++ b/source/Data/Locales/English.lng
@@ -25,6 +25,8 @@ P_I_Hidehelptip=Disable tray notificaion
 P_I_LaunchPs=Double click tray / Auto launch Photoshop
 P_I_LockIME=Lock input method to English
 P_I=Anti-disturb
+Other=Other
+Other_3dsMaxSync=3ds Max Sync
 C_TempFiles=Automatically clean up temporary files after exit
 Savenow=Save now!
 Set_hotkey_Center=Center
@@ -50,4 +52,4 @@ Error=Error
 CannotConnect=Cannot connect to the Internet.
 NewVer=New Version!
 NewVerAvailable =There's a new version v%LatestVer% available.\n\nClikc Yes to Auto Update now!\n\nClick No to go to website.
-NewVerNotAvailable= You are using the latest version v%CurrentVer%.
+NewVerNotAvailable=Updated successfully!\nThe current version is
