--- a/source/Data/Locales/正體中文.lng
+++ b/source/Data/Locales/正體中文.lng
@@ -55,7 +55,7 @@ Error=錯誤
 CannotConnect=無法連接網際網路
 NewVer=發現新版本！
 NewVerAvailable=當前發布了一個新版本： v%LatestVer%\n\n點擊 確定 立即更新！\n\n點擊 取消 手動更新。
-NewVerNotAvailable=你正在使用最新版本 v%CurrentVer%。
+NewVerNotAvailable=更新成功！
 
 HT_FChoice=軟體功能分類列表。\n注意事項\n\t本軟體部分功能仍有缺陷，請盡量使用正確的操作方式，例如在套索工具狀態下使用 HUD 檢色器容易造成假死。\n\t請毋連續使用快速鍵，容易占用 CPU 過高導致 Photoshop 不穩定。\n\t某些軟體可能對本軟體造成嚴重的性能損失，請在使用本軟體及 Photoshop 時禁用其 進程/服務（如gdipp）。\n\t任何人均不會對本軟體造成的任何不良后果承擔責任。
 HT_GB_General=HT_GB_General
