--- a/source/Data/Locales/简体中文.lng
+++ b/source/Data/Locales/简体中文.lng
@@ -54,7 +54,7 @@ Error=错误
 CannotConnect =无法连接互联网
 NewVer=发现新版本！
 NewVerAvailable=当前发布了一个新版本： v%LatestVer%\n\n点击 确定 立即更新！\n\n点击 取消 手动更新。
-NewVerNotAvailable=更新成功！当前版本：v
+NewVerNotAvailable=更新成功！
 
 HT_FChoice=软件功能分类列表。\n注意事项\n\t本软件部分功能仍有缺陷，请尽量使用正确的操作方式，例如在套索工具状态下使用 HUD 拾色器容易造成假死。\n\t请毋连续使用快捷键，容易占用 CPU 过高导致 Photoshop 不稳定。\n\t某些软件可能对本软件造成严重的性能损失，请在使用本软件及 Photoshop 时禁用其 进程/服务（如gdipp）。\n\t任何人均不会对本软件造成的任何不良后果承担责任。
 HT_GB_General=HT_GB_General
