--- a/source/Data/Locales/简体中文.lng
+++ b/source/Data/Locales/简体中文.lng
@@ -28,6 +28,12 @@ P_I_LockIME=锁定为英文输入法
 C_TempFiles=退出时自动清理残留临时文件
 P_I=防止干扰
 Other=其他
+Script=脚本
+Scrip_Name=脚本名
+Scrip_From=来源
+Scrip_Install=已安装
+Script_Description=说明
+Script_Shortcuts=快捷键
 Other_3DsMaxSync=3ds Max 贴图同步
 Savenow=立刻保存！
 Set_hotkey_Center=中心
