--- a/source/Data/Locales/English.lng
+++ b/source/Data/Locales/English.lng
@@ -17,6 +17,7 @@ HelpTip=Help
 dontsavenow=Hide
 ColorPicker=Color Picker
 Hotkey=Hotkey
+PsDir=Browse to the location of Photoshop
 Langtip=Language has been changed now!
 LockIMEtip=Your input method has been locked to English by Photoshop CS5++
 Msg_Debug=Error: Missing coordinates, Please try the following solution:\n - Set correctly in the program you are currently using Photoshop version\n - set The system themen to the default\n  - A front window of influence, maybe need to turn it off\n - Check the Photoshop version of the file folder picture is consistently (see note)
