--- a/source/Data/Locales/简体中文.lng
+++ b/source/Data/Locales/简体中文.lng
@@ -29,6 +29,8 @@ P_I_LockIME=锁定为英文输入法
 C_TempFiles=退出时自动清理残留临时文件
 P_I=防止干扰
 Other=其他
+Donate=打赏作者
+Donate_text=感谢使用 Apssistant！\n此软件自 2007 年诞生以来，已经为全世界无数的 Photoshop 用户提供了帮助。\n如果这款软件曾经对你有帮助，可以请作者喝杯咖啡以表支持。\n金额不限，感谢你的心意。
 Other_3DsMaxSync=3ds Max 贴图同步
 Savenow=立刻保存！
 Set_hotkey_Center=中心
@@ -48,6 +50,8 @@ tray_Config=设置
 tray_Exit=退出
 tray_LaunchPs=启动 Photoshop
 LockIMEtip=你的输入法已经被锁定为英文
+tray_LockIMEOn=已锁定为英文输入法
+tray_LockIMEOff=未锁定为英文输入法
 OpenGLtip=1.此功能需到首选项>>性能中启用 OpenGL 绘图\n2.按住空格以切换选色区域
 Tiptitle=提示
 Undotip=以下左边默认快捷键已更改为右边：
