* 修正托盘快速启动逻辑 * 修正更新器逻辑 * 替换过时代码

--- a/source/Data/Locales/English.lng
+++ b/source/Data/Locales/English.lng
@@ -17,8 +17,8 @@ Config_Cancel=Cancel
 Config_CS5mark=Gray items only used for CS5
 Config_Save=Save
 Config_Browse=Browse...
-HelpTip=Tip
-dontsavenow=Hide
+HelpTip=Tips
+dontsavenow=Ignore
 ColorPicker=Color Picker
 Hotkey=Hotkey
 PsDir=Browse to the location of Photoshop
@@ -30,13 +30,13 @@ Msg_Debug=Error: Missing coordinates, Please try the following solution:\n - Set
 OpenGLtip=a.Please enable Preferences>>Enable OpenGL Drawing\nb.Hold on/off space to change hue at the same time
 P_I_DisableAltMenu=Disable Alt menu
 P_I_Hidehelptip=Disable tray notificaion
-P_I_LaunchPs=Double click tray / Auto launch Photoshop
+P_I_LaunchPs=Auto launch Photoshop
 P_I_LockIME=Lock input method to English
 P_I=Anti-disturb
 Other=Other
 Other_3dsMaxSync=3ds Max Sync
 Donate=Donate
-Donate_text=Thank you use Apssistant！\nThis software has helped countless Photoshop users around the world since 2007.\nIf this software used to be helpful to you, you can treat me to have a cup of coffee.\nAny amount, thanks for your kindness.\n\n\t\tJack(The Author)
+Donate_text=Thank you for using Apssistant！\nThis software has helped countless Photoshop users around the world since 2010.\nIf this software used to be helpful to you, you can treat me to have a cup of coffee.\nAny amount, thanks for your kindness.\n\n\t\tJack(The Author)
 
 C_TempFiles=Automatically clean up temporary files after exit
 Savenow=Save now!
